
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef size_t u8 ;
typedef size_t u32 ;
struct bq25890_range {int max; int min; int step; } ;
typedef enum bq25890_table_ids { ____Placeholder_bq25890_table_ids } bq25890_table_ids ;
struct TYPE_3__ {size_t* tbl; size_t size; } ;
struct TYPE_4__ {struct bq25890_range rt; TYPE_1__ lt; } ;


 int TBL_TREG ;
 TYPE_2__* bq25890_tables ;

__attribute__((used)) static u8 bq25890_find_idx(u32 value, enum bq25890_table_ids id)
{
 u8 idx;

 if (id >= TBL_TREG) {
  const u32 *tbl = bq25890_tables[id].lt.tbl;
  u32 tbl_size = bq25890_tables[id].lt.size;

  for (idx = 1; idx < tbl_size && tbl[idx] <= value; idx++)
   ;
 } else {
  const struct bq25890_range *rtbl = &bq25890_tables[id].rt;
  u8 rtbl_size;

  rtbl_size = (rtbl->max - rtbl->min) / rtbl->step + 1;

  for (idx = 1;
       idx < rtbl_size && (idx * rtbl->step + rtbl->min <= value);
       idx++)
   ;
 }

 return idx - 1;
}
